tests/Tree/negative/test001.jvt
-- division by zero

function f(x : integer) : integer {
  div(2, x)
}

function main() : * {
  call[f](0)
}
